dogfood, whitespaces